# ndn-ind

./: .gitignore  CHANGELOG  INSTALL.RHEL7.md  INSTALL.md  Makefile.am  Makefile.in  README-NDN-IND-Lite.md  README.md  configure  configure.ac  libndn-ind.pc.in  protobuf-stub.txt
VisualStudio/: Visual-Studio-README.md  ndn-ind-config.h
android-native/: Android.mk  INSTALL-android.md  ndn-ind-config.h
examples/: cert-install.cpp  test-access-manager.cpp  test-channel-discovery.cpp  test-chrono-chat.cpp  test-custom-tpm.cpp  test-echo-consumer-lite.cpp  test-echo-consumer-raw-tcp.cpp  test-echo-consumer.cpp  test-encode-decode-benchmark.cpp  test-encode-decode-data.cpp  test-encode-decode-fib-entry.cpp  test-encode-decode-interest.cpp  test-full-psync-with-users.cpp  test-full-psync.cpp  test-generalized-content.cpp  test-get-async-threadsafe.cpp  test-get-async.cpp  test-list-channels.cpp  test-list-faces.cpp  test-list-rib.cpp  test-prefix-discovery.cpp  (+7 more)
include/: Makefile.am  Makefile.in  config.h.in
include/ndn-cpp/: interest.hpp
include/ndn-ind/: common.hpp  control-parameters.hpp  control-response.hpp  data.hpp  delegation-set.hpp  digest-sha256-signature.hpp  exclude.hpp  face.hpp  forwarding-flags.hpp  generic-signature.hpp  hmac-with-sha256-signature.hpp  interest-filter.hpp  interest.hpp  key-locator.hpp  link.hpp  lp-packet-header-field.hpp  meta-info.hpp  name.hpp  network-nack.hpp  registration-options.hpp  sha256-with-ecdsa-signature.hpp  sha256-with-rsa-signature.hpp  signature.hpp  threadsafe-face.hpp
include/ndn-ind-tools/micro-forwarder/: micro-forwarder-transport.hpp  micro-forwarder.hpp
include/ndn-ind-tools/usersync/: channel-discovery.hpp  content-meta-info.hpp  generalized-content.hpp  prefix-discovery.hpp
include/ndn-ind/c/: common.h  errors.h
include/ndn-ind/c/encoding/: element-reader-types.h
include/ndn-ind/c/encrypt/algo/: encrypt-params-types.h
include/ndn-ind/c/transport/: transport-types.h
include/ndn-ind/encoding/: base64.hpp  element-listener.hpp  oid.hpp  protobuf-tlv.hpp  tlv-0_1-wire-format.hpp  tlv-0_1_1-wire-format.hpp  tlv-0_2-wire-format.hpp  tlv-0_3-wire-format.hpp  tlv-wire-format.hpp  wire-format.hpp
include/ndn-ind/encrypt/: access-manager-v2.hpp  decryptor-v2.hpp  encrypt-error.hpp  encrypted-content.hpp  encryptor-v2.hpp  schedule.hpp  sqlite3-consumer-db.hpp  sqlite3-group-manager-db.hpp  sqlite3-producer-db.hpp
include/ndn-ind/in-memory-storage/: in-memory-storage-retaining.hpp
include/ndn-ind/lite/: control-parameters-lite.hpp  control-response-lite.hpp  data-lite.hpp  delegation-set-lite.hpp  exclude-lite.hpp  forwarding-flags-lite.hpp  interest-lite.hpp  key-locator-lite.hpp  meta-info-lite.hpp  name-lite.hpp  network-nack-lite.hpp  registration-options-lite.hpp  signature-lite.hpp
include/ndn-ind/lite/encoding/: element-listener-lite.hpp  element-reader-lite.hpp  tlv-0_1_1-wire-format-lite.hpp  tlv-0_2-wire-format-lite.hpp  tlv-0_3-wire-format-lite.hpp
include/ndn-ind/lite/encrypt/: encrypted-content-lite.hpp
include/ndn-ind/lite/encrypt/algo/: aes-algorithm-lite.hpp  chacha20-algorithm-lite.hpp  des-algorithm-lite.hpp
include/ndn-ind/lite/lp/: congestion-mark-lite.hpp  incoming-face-id-lite.hpp  lp-packet-lite.hpp
include/ndn-ind/lite/security/: ec-private-key-lite.hpp  ec-public-key-lite.hpp  rsa-private-key-lite.hpp  rsa-public-key-lite.hpp  validity-period-lite.hpp
include/ndn-ind/lite/transport/: tcp-transport-lite.hpp  udp-transport-lite.hpp  unix-transport-lite.hpp
include/ndn-ind/lite/util/: blob-lite.hpp  crypto-lite.hpp  dynamic-malloc-uint8-array-lite.hpp  dynamic-uint8-array-lite.hpp
include/ndn-ind/security/: command-interest-preparer.hpp  command-interest-signer.hpp  key-chain.hpp  key-params.hpp  safe-bag.hpp  security-exception.hpp  signing-info.hpp  validator-config-error.hpp  validator-null.hpp  validity-period.hpp  verification-helpers.hpp
include/ndn-ind/security/certificate/: certificate-extension.hpp  certificate-subject-description.hpp  certificate.hpp  public-key.hpp  x509-certificate-info.hpp  x509-crl-info.hpp
include/ndn-ind/security/identity/: basic-identity-storage.hpp  identity-manager.hpp  memory-private-key-storage.hpp  osx-private-key-storage.hpp
include/ndn-ind/security/pib/: pib-certificate-container.hpp  pib-identity-container.hpp  pib-identity.hpp  pib-impl.hpp  pib-key-container.hpp  pib-key.hpp  pib-memory.hpp  pib-sqlite3.hpp  pib.hpp
include/ndn-ind/security/policy/: config-policy-manager.hpp
include/ndn-ind/security/tpm/: helper-osx.hpp  tpm-back-end-file.hpp  tpm-back-end-memory.hpp  tpm-back-end-osx.hpp  tpm-back-end.hpp  tpm-key-handle-memory.hpp  tpm-key-handle-osx.hpp  tpm-key-handle.hpp  tpm-private-key.hpp  tpm.hpp
include/ndn-ind/security/v2/: certificate-cache-v2.hpp  certificate-fetcher-from-network.hpp  certificate-fetcher-offline.hpp  certificate-fetcher.hpp  certificate-request.hpp  certificate-storage.hpp  certificate-v2.hpp  trust-anchor-container.hpp  trust-anchor-group.hpp  validation-error.hpp  validation-policy-accept-all.hpp  validation-policy-command-interest.hpp  validation-policy-config.hpp  validation-policy-from-pib.hpp  validation-policy-simple-hierarchy.hpp  validation-policy.hpp  validation-state.hpp  validator.hpp  x509-crl-cache.hpp  x509-crl-fetcher.hpp
include/ndn-ind/security/v2/validator-config/: config-checker.hpp  config-filter.hpp  config-name-relation.hpp  config-rule.hpp
include/ndn-ind/sync/: chrono-sync2013.hpp  full-psync2017-with-users.hpp  full-psync2017.hpp  psync-missing-data-info.hpp  psync-producer-base.hpp
include/ndn-ind/transport/: async-tcp-transport.hpp  async-unix-transport.hpp  tcp-transport.hpp  transport.hpp  udp-transport.hpp  unix-transport.hpp
include/ndn-ind/util/: blob.hpp  change-counter.hpp  exponential-re-express.hpp  logging.hpp  memory-content-cache.hpp  scheduler.hpp  segment-fetcher.hpp  signed-blob.hpp  time-custom-clock.hpp  time.hpp
include/ndn-ind/util/impl/: asio-fwd.hpp  cancel-handle.hpp  monotonic_steady_clock.hpp  steady-timer.hpp
src/: common.cpp  (+22 more)
(+353 files in other folders)
